--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<!--Adding some comments-->
 	<title>A simple website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
